# zendo-backend

./: Cargo.toml
migrations/: 20260122165031_create_users_table.sql
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/auth/: extractor.rs  jwt.rs
src/common/: mod.rs  structs.rs  util.rs
src/dtos/: requests.rs  responses.rs
src/models/: user.rs
src/routes/: health.rs  mod.rs  user_routes.rs
