[package]
name = "zendo"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
config = "0.15.19"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "runtime-tokio", "postgres", "macros", "uuid", "chrono", "json"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
async-trait = "0.1"
